// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routing app routes match snapshot 1`] = `
Object {
  "auth": true,
  "authComponent": [Function],
  "component": [Function],
  "exact": true,
  "name": "Root Path",
  "path": "/",
}
`;

exports[`routing app routes match snapshot 2`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": [Function],
  "name": "Messages",
  "path": "/messages",
}
`;

exports[`routing app routes match snapshot 3`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": [Function],
  "name": "Proposals",
  "path": "/proposals",
}
`;

exports[`routing app routes match snapshot 4`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": [Function],
  "name": "Bookings",
  "path": "/bookings",
}
`;

exports[`routing app routes match snapshot 5`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": [Function],
  "name": "Holds",
  "path": "/holds",
}
`;

exports[`routing app routes match snapshot 6`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": [Function],
  "name": "Search",
  "path": "/search",
}
`;

exports[`routing app routes match snapshot 7`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": [Function],
  "name": "Calendar",
  "path": "/calendar",
}
`;

exports[`routing app routes match snapshot 8`] = `
Object {
  "component": [Function],
  "name": "Login",
  "path": "/login",
}
`;

exports[`routing app routes match snapshot 9`] = `
Object {
  "component": [Function],
  "name": "Create Account",
  "path": "/sign-up",
}
`;

exports[`routing app routes match snapshot 10`] = `
Object {
  "component": [Function],
  "exact": true,
  "name": "Password Reset",
  "path": "/password-reset",
}
`;

exports[`routing app routes match snapshot 11`] = `
Object {
  "component": [Function],
  "exact": true,
  "name": "Password Reset",
  "path": "/password-reset/:token",
}
`;

exports[`routing app routes match snapshot 12`] = `
Object {
  "component": [Function],
  "exact": true,
  "name": "Content Pages",
  "path": "/:pageId",
}
`;

exports[`routing app routes match snapshot 13`] = `
Object {
  "component": [Function],
  "name": "Not Found",
}
`;
